--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <script type="application/javascript">
   </script>
   <body>
-    <main id="main"></main>
+    <main id="main">
+      <h1 id="victory">H1</h1>
+      <h1 id="victory">victory</h1>
+      <h1 id="victory">Zainab is the champion</h1>
+    </main>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
